--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "main": "node_modules/expo/AppEntry.js",
   "private": true,
   "scripts": {
-    "start": "expo start",
+    "start": "expo start -c",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "^29.0.0",
+    "expo": "^30.0.0",
     "react": "16.3.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-29.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
     "react-native-animatable": "^1.3.0",
     "react-navigation": "^2.13.0",
     "react-navigation-fluid-transitions": "^0.2.6"
